samples/_failures_safe/1761181860_5781f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc8863cd.c: In function ‘main’:
./samples/SAFE/__tmp_cc8863cd.c:144:5: error: expected expression at end of input
  144 |     if (add_compression_block(&ctx, sample_data1, sizeof
      |     ^~
./samples/SAFE/__tmp_cc8863cd.c:144:5: error: expected declaration or statement at end of input
